# FireFuse

./: .gitignore  CMakeLists.txt  CachedValue.hpp  FireFUSE.c  FireFUSE.h  FireFuse.c  FireFuse.h  FireFuse.h.in  FireLog.c  FireLog.cpp  FireLog.h  FirePiCam.h  FirePick.cpp  FirePick.h  FireREST-CV.cpp  FireREST.h  FireSight.cpp  FireSight.hpp  FireStep.cpp  FireStep.h  FireUtils.hpp  LICENSE  LIFOCache.hpp  README.md  background.cpp  background.h  build  calibrate.cpp  cnc.cpp  cv.cpp  cve.cpp  dce.cpp  firefuse.cpp  firefuse.h  firerest.cpp  firesight  fuse.c  make.sh  mountfirefuse.sh  postinst  (+5 more)
cv/1/bgr/cve/calc-offset/: firesight.json
cv/1/cve/locate-part/: model.json
cv/1/gray/cve/calc-offset/: firesight.json
cv/1/gray/cve/locate-part/: firesight.json
firefuse/cv/1/bgr/cve/calc-offset/: process.json
firefuse/cv/1/gray/cve/locate-part/: save.json
node/: nodejs  server.js
test/: calc-offset-firesight.json  firefuse.ls  mock.cpp  test  test.cpp  testconfig-cnc.json  testconfig.json  testserial.json
var/firefuse/: config.json
